tests/baselines/reference/forOfOptionalTupleMember(exactoptionalpropertytypes=false,target=esnext).errors.txt
forOfOptionalTupleMember.ts(12,3): error TS18048: 'item' is possibly 'undefined'.


==== forOfOptionalTupleMember.ts (1 errors) ====
    // repro from https://github.com/microsoft/TypeScript/issues/54302
    
    type Item = {
      value: string;
    };
    
    type Foo = [Item?];
    
    declare const foo: Foo;
    
    for (let item of foo) {
      item.value;
      ~~~~
!!! error TS18048: 'item' is possibly 'undefined'.
    }
    